--- a/platformio.ini
+++ b/platformio.ini
@@ -6,12 +6,12 @@ platform = espressif32
 platform_packages = framework-arduinoespressif32@https://github.com/espressif/arduino-esp32.git#2.0.5
 framework = arduino
 board = esp32-s3-devkitc-1
-board_build.psram_type = opi
 board_build.code_debug = 5
 board_build.memory_type = qspi_opi
 board_build.partitions = default_8MB.csv
 board_build.arduino.memory_type = qio_opi
 board_build.flash_size = 16MB
+board_build.psram_type = opi
 board_build.psram_size = 8MB
 
 build_flags = 
@@ -22,6 +22,7 @@ build_flags =
     ; -mfix-esp32-psram-cache-strategy=memw
     -DARDUINO_USB_MODE=1
     -DARDUINO_USB_CDC_ON_BOOT=1
+    -Isrc/include/esp32s3-lilygo-tdisplay
 upload_port = /dev/cu.usbmodem*
 upload_speed = 921600
 monitor_speed = 115200
